@@ -1,5 +1,11 @@
 # $Id$
 
+2008-11-21	Vladlen Y. Koshelev
+
+	* main/UnifiedContainer/ManyToManyLinkedWorker.class.php: fixed duplicate
+	join error occured when custom criteria has joiner on container's helper
+	table.
+
 2008-11-19	Vladlen Y. Koshelev
 
 	* main/DAOs/ProtoDAO.class.php: fixed wrong cid-field table when lazy
